tests/build/widget_new/unknown_property2.rs
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        unknown = {
            value: 0,
        };
    };
}
